--- a/M1/scraps/numpy.ipynb
+++ b/M1/scraps/numpy.ipynb
@@ -2497,8 +2497,824 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "15c300ee-26ec-409b-8e6f-d2479500c730",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 8, 1, 7, 8])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.randint(low = 1, high = 10, size = 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "dbc59cd0-460b-4f6f-bd28-f2ab7d3695b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "feb57609-e56b-426b-8044-be618841cf80",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 3, 5])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.choice(a = np.arange(1,7), size = 3, replace = False, p = np.array([0.2,0.1,0.2,0.1,0.2,0.2]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "46cf74b2-590b-42fb-84f5-d3ee50598674",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "foo = np.array([\n",
+    "    [1,2],\n",
+    "    [3,4],\n",
+    "    [5,6],\n",
+    "    [7,8],\n",
+    "    [9,10]\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "5e6c4fdd-b06f-42f4-b4dc-89ca8a7438f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5, 2)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "foo.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e09e3646-befa-4713-8d1f-a4312d1040b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "foo.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "ea463e85-8348-4960-9b79-8fe9999040bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rand_rows = np.random.randint( low = 0, high = foo.shape[0], size = 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "bb56d117-f7b0-427d-87ab-27d1045f4270",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 5,  6],\n",
+       "       [ 9, 10],\n",
+       "       [ 5,  6]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "foo[rand_rows]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "0b1b7470-0df9-49d7-914f-cafb46ee5e2e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 9, 10],\n",
+       "       [ 3,  4],\n",
+       "       [ 1,  2],\n",
+       "       [ 7,  8],\n",
+       "       [ 5,  6]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.permutation(foo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "59925fbb-38cd-4dce-8557-04a22176ecfa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([4.30565153, 1.62477994])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.uniform(low = 0, high = 7, size = 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "249bee7f-bd8b-4000-b207-c7839dd27a29",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-3.57002059, -0.58079052])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.normal(loc = 0.0, scale = 2.0, size = 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "ff82e8dc-4504-4e8a-99b5-2e7238ec9591",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([7, 5, 4, 7, 4])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.binomial(n = 10, p = 0.5, size = 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "145af217-f946-4c81-9a7e-597cacd2a3e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "generator = np.random.default_rng()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "aceee2b2-5448-4eeb-ad45-40950b5d189d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([6, 0, 5])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "generator.integers(0,7,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "7adafb90-d24a-470e-827d-9721c9e67c41",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([5, 3, 4, 6, 3])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "generator.binomial(10,0.5,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "88154e52-919f-4ecd-9398-86cdeb6ff13c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "374dcd81-37cc-4132-a728-4168caeea39f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "generator = np.random.default_rng(1010)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "16a79dca-e200-4ba2-849f-a3b37b9dd127",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "love_scores = np.round(generator.uniform(low = 0, high = 100, size = 10), 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "bc693b47-1456-4695-ae88-087e97f96426",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 9.5 , 53.58, 91.77, 98.15, 84.88, 74.61, 40.94, 56.49,  8.39,\n",
+       "       64.69])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "love_scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "ea43afb3-7c8b-4348-92f9-716c457c87a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "score = np.abs(love_scores[:, None] - love_scores[None, :])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "76402a06-01fd-4626-be5d-64b43cbf59b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10, 10)"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "score.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "abd1e92e-8d53-4108-ad7a-63bf7ff898bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 9.5 ],\n",
+       "       [53.58],\n",
+       "       [91.77],\n",
+       "       [98.15],\n",
+       "       [84.88],\n",
+       "       [74.61],\n",
+       "       [40.94],\n",
+       "       [56.49],\n",
+       "       [ 8.39],\n",
+       "       [64.69]])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "love_scores[:,None]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "e1bdbb3d-3472-45b4-91da-5ecc347c630e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 9.5 , 53.58, 91.77, 98.15, 84.88, 74.61, 40.94, 56.49,  8.39,\n",
+       "        64.69]])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "love_scores[None, :]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "010acb19-73b2-4223-9507-27ddf54373da",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.  , 44.08, 82.27, 88.65, 75.38, 65.11, 31.44, 46.99,  1.11,\n",
+       "        55.19],\n",
+       "       [44.08,  0.  , 38.19, 44.57, 31.3 , 21.03, 12.64,  2.91, 45.19,\n",
+       "        11.11],\n",
+       "       [82.27, 38.19,  0.  ,  6.38,  6.89, 17.16, 50.83, 35.28, 83.38,\n",
+       "        27.08],\n",
+       "       [88.65, 44.57,  6.38,  0.  , 13.27, 23.54, 57.21, 41.66, 89.76,\n",
+       "        33.46],\n",
+       "       [75.38, 31.3 ,  6.89, 13.27,  0.  , 10.27, 43.94, 28.39, 76.49,\n",
+       "        20.19],\n",
+       "       [65.11, 21.03, 17.16, 23.54, 10.27,  0.  , 33.67, 18.12, 66.22,\n",
+       "         9.92],\n",
+       "       [31.44, 12.64, 50.83, 57.21, 43.94, 33.67,  0.  , 15.55, 32.55,\n",
+       "        23.75],\n",
+       "       [46.99,  2.91, 35.28, 41.66, 28.39, 18.12, 15.55,  0.  , 48.1 ,\n",
+       "         8.2 ],\n",
+       "       [ 1.11, 45.19, 83.38, 89.76, 76.49, 66.22, 32.55, 48.1 ,  0.  ,\n",
+       "        56.3 ],\n",
+       "       [55.19, 11.11, 27.08, 33.46, 20.19,  9.92, 23.75,  8.2 , 56.3 ,\n",
+       "         0.  ]])"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "539ace15-80e9-4f59-8d4c-4e681d81bf55",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.set_printoptions(linewidth = 999)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "4053802f-838f-4925-98cb-77426b0b4f62",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.  , 44.08, 82.27, 88.65, 75.38, 65.11, 31.44, 46.99,  1.11, 55.19],\n",
+       "       [44.08,  0.  , 38.19, 44.57, 31.3 , 21.03, 12.64,  2.91, 45.19, 11.11],\n",
+       "       [82.27, 38.19,  0.  ,  6.38,  6.89, 17.16, 50.83, 35.28, 83.38, 27.08],\n",
+       "       [88.65, 44.57,  6.38,  0.  , 13.27, 23.54, 57.21, 41.66, 89.76, 33.46],\n",
+       "       [75.38, 31.3 ,  6.89, 13.27,  0.  , 10.27, 43.94, 28.39, 76.49, 20.19],\n",
+       "       [65.11, 21.03, 17.16, 23.54, 10.27,  0.  , 33.67, 18.12, 66.22,  9.92],\n",
+       "       [31.44, 12.64, 50.83, 57.21, 43.94, 33.67,  0.  , 15.55, 32.55, 23.75],\n",
+       "       [46.99,  2.91, 35.28, 41.66, 28.39, 18.12, 15.55,  0.  , 48.1 ,  8.2 ],\n",
+       "       [ 1.11, 45.19, 83.38, 89.76, 76.49, 66.22, 32.55, 48.1 ,  0.  , 56.3 ],\n",
+       "       [55.19, 11.11, 27.08, 33.46, 20.19,  9.92, 23.75,  8.2 , 56.3 ,  0.  ]])"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "9dd2c7cd-e8c2-4a7e-b63f-31b135683e47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "generator = np.random.default_rng(80085)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "7361e32b-62a7-42e1-a88c-288cfc5f47bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scores = np.round(generator.uniform(low = 30, high = 100, size = 15))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "48dd17db-7d5c-489c-b2cf-5830a59d48a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([68., 36., 76., 57., 56., 54., 63., 64., 36., 88., 80., 82., 84., 76., 42.])"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "3d9d7049-0301-4aff-8dc7-6e427a246b7a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([68., 76., 63., 64., 88., 80., 82., 84., 76.])"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores[scores > 60]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "52e8120c-1896-4eda-9f13-4d09955b4c6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([68.,  0., 76.,  0.,  0., 54., 63., 64., 36., 88., 80., 82., 84., 76., 42.])"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "c8c7cecc-01ab-4a3a-817d-837c78f7bbe2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([ 0,  2,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14]),)"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores.nonzero()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "40e92afb-c91a-4e40-9db1-684fdeac5c13",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0,  2,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14])"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores.nonzero()[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "e070f125-e381-44e5-99ff-36e64634f48e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scores[(scores < 60).nonzero()[0][:3]]= 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "9fae2e81-5021-4024-880e-b25d03da1787",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([68.,  0., 76.,  0.,  0., 54., 63., 64., 36., 88., 80., 82., 84., 76., 42.])"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "1681ae7f-47d5-4905-b38e-65dcfb154a09",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False,  True, False,  True,  True,  True, False, False,  True, False, False, False, False, False,  True])"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores < 60"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "db863c2d-ddcd-42bc-9cb3-1cc3b4139153",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scores[scores > 60] = 99"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "93913be6-2807-4dbd-b707-da4e8f29400f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([99.,  0., 99.,  0.,  0., 54., 99., 99., 36., 99., 99., 99., 99., 99., 42.])"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "0cd870a2-ea49-4ce6-9f79-f755b877f82a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "field = np.zeros((10,10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "7c521998-b923-490f-a507-cb4c41aed5ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "field"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "246be9c3-053c-4285-a9c6-f246cc5ee9f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "generator = np.random.default_rng(1234)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "af15a498-2a1f-4ac3-8e8a-01524294bc4c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vals = np.round(generator.normal(size = 20),2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "9eb663ba-02bb-41ca-a221-49d338fc9696",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "locs = generator.choice(field.size, len(vals), replace = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "0aed6f23-052f-4d63-8580-b03b573c1e84",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "field.ravel()[locs] = vals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "6fac9ffe-85ac-42f3-853a-c2c0ffa84c3d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.52,  0.  ,  0.  , -1.48,  0.  ,  2.91,  0.  ,  0.  ,  0.  ,  0.  ],\n",
+       "       [ 0.  , -1.27,  0.  ,  0.  ,  0.  , -1.6 ,  0.  ,  1.73,  0.  ,  0.  ],\n",
+       "       [ 0.  ,  0.  ,  0.  ,  0.  ,  0.43,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ],\n",
+       "       [ 0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.34,  0.  ,  0.  ,  0.  , -1.67],\n",
+       "       [ 0.  ,  0.86,  0.74,  0.  ,  0.  ,  0.  ,  1.32,  0.  ,  0.52,  0.  ],\n",
+       "       [ 0.  , -1.  ,  0.  ,  0.  ,  0.  ,  0.15,  0.  ,  0.  ,  0.  ,  0.  ],\n",
+       "       [ 0.  , -0.51,  0.  , -0.86,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ],\n",
+       "       [ 0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ],\n",
+       "       [ 0.  ,  0.  ,  0.  ,  0.  , -2.16,  0.  ,  0.95,  0.  ,  0.  ,  0.  ],\n",
+       "       [ 0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.06]])"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "field"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd3fbc78-8cd9-40ca-8517-2bc9367047d7",
    "metadata": {},
    "outputs": [],
    "source": []
